# angle-xcframework

./: Catalyst.arm64.args.gn  Catalyst.x64.args.gn  Info.plist  Mac.arm64.args.gn  Mac.x64.args.gn  README.md  Simulator.arm64.args.gn  Simulator.x64.args.gn  TVOS.arm64.args.gn  TVOSSimulator.arm64.args.gn  TVOSSimulator.x64.args.gn  VisionOS.arm64.args.gn  VisionOSSImulator.arm64.args.gn  VisionOSSimulator.arm64.args.gn  VisionOSSimulator.x64.args.gn  angle.apple.patch  angle.visionos.patch  azure-pipelines.yml  build.sh  build_xcframework.sh  bundle_in_framework.sh  chromium.build.apple.patch  chromium.build.visionos.patch  create_egl_headers.sh  create_glesv2_headers.sh  flip_y.patch  generate_info_plist.sh  iOS.arm64.args.gn  variable_rasterization_rate_map.patch
jobs/: build.yml  xcframework.yml
