target_os = "ios"
is_component_build = false
target_cpu = "x64"
is_debug = false
is_official_build = true
angle_assert_always_on = false
target_environment = "catalyst"
ios_enable_code_signing = false
ios_deployment_target = "14.0"
angle_build_tests = false
angle_enable_gl = false
angle_enable_vulkan = false
angle_enable_d3d9 = false
angle_enable_d3d11 = false
angle_enable_metal = true
angle_enable_glsl = true
angle_enable_essl = true
angle_build_all = false
angle_enable_apple_translator_workarounds = true
clang_base_path = "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr"
clang_use_chrome_plugins = false
use_lld = false
use_thin_lto = false
chrome_pgo_phase = 0
angle_enable_abseil = false
angle_enable_share_context_lock = false
