target_os = "mac"
is_component_build = false
target_cpu = "arm64"
is_debug = false
angle_assert_always_on = false
mac_deployment_target = "11.0"
angle_build_tests = false
angle_enable_gl = false
angle_enable_vulkan = false
angle_enable_d3d9 = false
angle_enable_d3d11 = false
angle_enable_metal = true
angle_enable_glsl = true
angle_enable_essl = true
angle_build_all = false
angle_enable_apple_translator_workarounds = true
angle_enable_abseil = false
